@@ -8,6 +8,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -26,7 +27,8 @@ public class EmployeeService implements IEmployeeService {
 
     @Override
     public List<EmployeeResponse> getAllEmployees() {
-        return employeeRepository.findAll().stream().map(this::mapToEmployeeResponse).toList();
+        return employeeRepository.findAll().stream().map(this::mapToEmployeeResponse)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -53,7 +55,7 @@ public class EmployeeService implements IEmployeeService {
         return employeeRepository.findByDepartmentId(departmentId)
                 .stream()
                 .map(this::mapToEmployeeResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -61,6 +63,6 @@ public class EmployeeService implements IEmployeeService {
         return employeeRepository.findByOrganizationId(organizationId)
                 .stream()
                 .map(this::mapToEmployeeResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 }
